--- a/page.html
+++ b/page.html
@@ -4,7 +4,7 @@
       <title>Page Title</title>
     </head>
   <body>
-    <h1>Bad Political Compass</h1>
+    <h1>{{ title_page }}</h1>
     <p>Welcome to the Bad Political Compass page.</p>
   </body>
 </html>
