--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title>Page Title</title>
+      <title>{{ title_page }}</title>
     </head>
   <body>
     <h1>{{ title_page }}</h1>
